<resources>
    <string name="app_name">Abhinav Prakash</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">abhinavp403@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="name">- Abhinav Prakash</string>
    <string name="summary">Hi there! My name is Abhinav and I\'m an aspiring Android Developer. I studied at the University of
    Massachusetts Amherst and obtained my Bachelor\'s degree in Computer Science while also completing two minors in Economics and
    Mathematics. I come from a diverse background as I\'ve lived in both India and U.S.A, which has enabled me to get a multi-facted
    perspective on lifestyle, culture and eduction.
       \nI\'m going to use this app as a blog and will keep a hold of my portfolio. Stay tuned for periodic updates and blogs!\n\n</string>
    <string name="linkedin_url">LinkedIn URL</string>
    <string name="wixsite_url">Wixsite URL</string>
    <string name="github_url">Github URL</string>
    <string name="work">Work History</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_work">Work</string>
    <string name="expand">expand</string>
    <string name="menu_education">Education</string>
    <string name="menu_skills">Skills</string>
    <string name="contact">Contact</string>
    <string name="menu_contact">Contact</string>
    <string name="follow">Check Out My Accounts!!</string>
    <string name="instagram">Instagram</string>
    <string name="website">Website</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="weekly_updates">Weekly Updates</string>
    <string name="quote_of_the_week">Quote of the Week</string>
    <string name="movie_of_the_week">Movie of the Week</string>
    <string name="book_of_the_week">Book of the Week</string>
    <string name="projects">Projects</string>
    <string name="menu_projects">Projects</string>
    <string name="song_of_the_week">Song of the Week</string>
    <string name="menu_otherapps">Other Apps</string>
    <string name="otherapps">Other Apps</string>
    <string name="apps_heading">Here Are Other Apps That I\'ve Published</string>
    <string name="category_quotes">Category Quotes</string>
    <string name="smart_music_player">Smart Music Player</string>
    <string name="tic_tac_toe">Tic-Tac-Toe</string>
    <string name="movie_rater">Movie Rater</string>
    <string name="tennis_stats"><![CDATA[Tennis Stats - ATP & WTA]]></string>
</resources>
