<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:showIn="@layout/app_bar_main"
    android:background="@drawable/home_page_backg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:textAlignment="center"
        android:text="@string/weekly_updates"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:fontFamily="@font/countryside"/>

    <TextView
        android:id="@+id/sub_heading"
        android:layout_below="@id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"/>

    <LinearLayout
        android:id="@+id/quote_heading"
        android:layout_below="@id/sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsterdam"
            android:text="@string/quote_of_the_week"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galdeano"
            android:gravity="center_horizontal"
            android:text="Quote of the Week"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/movie_heading"
        android:layout_below="@id/quote_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsterdam"
            android:textAlignment="center"
            android:text="@string/movie_of_the_week"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galdeano"
            android:gravity="center_horizontal"
            android:text="Movie of the Week"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/book_heading"
        android:layout_below="@id/movie_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsterdam"
            android:textAlignment="center"
            android:text="@string/book_of_the_week"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galdeano"
            android:gravity="center_horizontal"
            android:text="Book of the Week"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/song_heading"
        android:layout_below="@id/book_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amsterdam"
            android:textAlignment="center"
            android:text="@string/song_of_the_week"
            android:textSize="16sp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galdeano"
            android:gravity="center_horizontal"
            android:text="Song of the Week"
            android:textSize="20sp"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>